# phusis

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
benches/: quad_tree.rs
examples/: bevy.rs  speed.rs  test.rs
src/: aabb.rs  body.rs  checks.rs  collision.rs  lib.rs  shape.rs  vec.rs  world.rs
src/bevy/: components.rs  debug.rs  mod.rs  systems.rs
src/quad_tree/: mod.rs
src/shape/: aabb.rs  circle.rs  mod.rs
src/world/: broad.rs  mod.rs
