[package]
name = "phusis"
version = "0.1.0"
authors = ["Isidor Nygren <karlisidornygren@gmail.com>"]
edition = "2018"

[lib]
name = "phusis"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
stopwatch = "0.0.7"
rand = "0.8.5"
bevy = "0.9"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev]
opt-level = 1
