[package]
name = "phusis"
version = "0.1.0"
authors = ["Isidor Nygren <karlisidornygren@gmail.com>"]
edition = "2018"

[lib]
name = "phusis"
path = "src/lib.rs"

[dependencies]
bevy = { version = "0.9", optional = true }
bevy_prototype_lyon = { version = "0.7", optional = true }

[dev-dependencies]
stopwatch = "0.0.7"
rand = "0.8.5"
bevy_prototype_lyon = "0.7"
bevy = "0.9"
criterion = "0.4.0"

[[bench]]
name = "quad_tree"
harness = false

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev]
opt-level = 3

[profile.release]
debug = true

[features]
default = ["bevy", "bevy_debug"]
bevy = ["dep:bevy"]
bevy_debug = ["bevy", "dep:bevy_prototype_lyon"]
