[package]
name = "phusis"
description = "A simple quad tree based physics engine with bevy compatibility"
repository = "https://github.com/isidornygren/phusis"
version = "0.1.0"
authors = ["Isidor Nygren <me@isidornygren.com>"]
edition = "2018"
license = "MIT"
readme = "./README.md"
keywords = ["physics engine", "quad tree"]
categories = ["data-structures", "game-development"]

[lib]
name = "phusis"
path = "src/lib.rs"

[dependencies]
bevy = { version = "0.10", optional = true }
bevy_prototype_lyon = { version = "0.8", optional = true }
generational-arena = "0.2.8"

[dev-dependencies]
stopwatch = "0.0.7"
rand = "0.8.5"
bevy_prototype_lyon = "0.8"
bevy = "0.10.1"
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "quad_tree"
harness = false

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev]
opt-level = 3

[profile.release]
debug = true

[features]
default = ["bevy", "bevy_debug"]
bevy = ["dep:bevy"]
bevy_debug = ["bevy", "dep:bevy_prototype_lyon"]
